# first-responder

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: scraper.yml
database/: JOBS.db  add_companies.py  create_db.py
docs/: COMPANIES.md  career_pages.md  other_job_boards.md
filter/: filters.py
markdown/: JOBS.md  JOBS_TEMP.md  OTHERS.md
notifier/: discord.py
scrapers/: ashby.py  greenhouse.py  hackernews.py  scraper.py  workday.py
scrapers/custom/: accenture.py  apple.py  google.py
